--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.6.0",
-    "@metamask/keyring-api": "^0.1.3",
+    "@metamask/keyring-api": "0.1.3",
     "@metamask/providers": "^11.0.0",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
