--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "packages/transeptor-bundler"]
-	path = packages/transeptor-bundler
-	url = https://github.com/transeptorlabs/transeptor-bundler
+[submodule "packages/transeptor"]
+	path = packages/transeptor
+	url = https://github.com/transeptorlabs/transeptor-bundler.git
