--- a/.sample.env
+++ b/.sample.env
@@ -1,1 +1,3 @@
 SNAP_ORIGIN=prod:http://localhost:8080
+MNEMONIC=test test test test test test test test test test test junk
+BENEFICIARY=0xd21934eD8eAf27a67f0A70042Af50A1D6d195E81
