--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -60,14 +60,11 @@
     "@ethereumjs/tx": "^4.1.2",
     "@ethereumjs/util": "^8.0.5",
     "@metamask/eth-sig-util": "^5.0.2",
-    "@metamask/key-tree": "^6.0.0",
-    "@metamask/keyring-api": "^0.1.3",
-    "@metamask/rpc-methods": "^0.30.0",
-    "@metamask/snaps-types": "0.38.0-flask.1",
+    "@metamask/keyring-api": "^1.0.0",
+    "@metamask/snaps-types": "^3.0.0",
     "@metamask/snaps-ui": "^0.32.2",
     "@metamask/utils": "^3.3.0",
     "buffer": "^6.0.3",
-    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.0",
     "uuid": "^9.0.0"
   },
@@ -78,7 +75,7 @@
     "@metamask/eslint-config-jest": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
-    "@metamask/snaps-cli": "^0.32.2",
+    "@metamask/snaps-cli": "^3.0.0",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
