--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/transeptorlabs/erc-4337-snap.git"
   },
   "source": {
-    "shasum": "3XRnxVmpMX3V0NeL02Nnq6Jz6BSF4FfXudJDZ5FzfXg=",
+    "shasum": "j0If8vPoISlrEt2eoykQWuDwqZULnZKSHrJDxEniUqI=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -27,6 +27,11 @@
     "endowment:network-access": {},
     "snap_manageState": {},
     "snap_manageAccounts": {},
+    "endowment:keyring": {
+      "allowedOrigins": [
+        "https://snap.transeptorlabs.io"
+      ]
+    },
     "snap_getEntropy": {}
   },
   "manifestVersion": "0.1"
