--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"]
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+  },
+  "include": ["src/", "snap.config.ts"]
 }
