--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.6.0",
-    "@metamask/keyring-api": "0.1.3",
-    "@metamask/providers": "^11.0.0",
+    "@metamask/keyring-api": "^1.0.0",
+    "@metamask/providers": "^13.0.0",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-blockies": "1.4.1",
