--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "@transeptor/erc-4337-relayer",
+  "name": "@transeptor-labs/smarthub-snap",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://github.com/transeptorlabs/erc-4337-relayer/tree/main/packages/snap#readme",
-  "description": "A MetaMask snap the wraps ERC-4337 eth namespace methods",
+  "homepage": "https://github.com/transeptorlabs/smarthub-snap/#readme",
+  "description": "A MetaMask snap the helps you manage ERC-4337 smart account",
   "repository": {
     "type": "git",
-    "url": "https://github.com/transeptorlabs/erc-4337-snap.git"
+    "url": "https://github.com/transeptorlabs/smarthub-snap.git"
   },
-  "license": "(MIT-0 OR Apache-2.0)",
+  "bugs": {
+    "url": "https://github.com/transeptorlabs/smarthub-snap/issues"
+  },
+  "keywords": [
+    "metamask",
+    "snap",
+    "keyring",
+    "smart account",
+    "ERC-4337"
+  ],
+  "license": "MIT",
   "author": {
     "name": "Transeptor Labs",
     "email": "transeptorhq@gmail.com",
     "url": "https://transeptorlabs.io"
   },
-  "main": "src/index.ts",
+  "main": "dist/bundle.js",
   "files": [
     "dist/",
     "images/",
@@ -98,7 +107,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "publishConfig": {
     "access": "public",
