--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "@transeptor/erc-4337-relayer",
+  "name": "@transeptor-labs/smarthub-snap",
   "version": "0.1.0",
-  "private": true,
-  "description": "A MetaMask snap the wraps ERC-4337 eth namespace methods",
+  "description": "A MetaMask snap the helps you manage ERC-4337 smart account",
+  "keywords": [
+    "metamask",
+    "snap",
+    "keyring",
+    "smart account",
+    "ERC-4337"
+  ],
+  "homepage": "https://github.com/transeptorlabs/smarthub-snap/#readme",
+  "bugs": {
+    "url": "https://github.com/transeptorlabs/smarthub-snap/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/transeptorlabs/erc-4337-snap.git"
+    "url": "https://github.com/transeptorlabs/smarthub-snap.git"
   },
-  "license": "(MIT-0 OR Apache-2.0)",
+  "license": "MIT",
   "author": {
     "name": "Transeptor Labs",
     "email": "transeptorhq@gmail.com",
     "url": "https://transeptorlabs.io"
   },
-  "main": "src/index.ts",
+  "main": "dist/bundle.js",
   "files": [
     "dist/",
     "images/",
@@ -59,14 +69,11 @@
     "@ethereumjs/tx": "^4.1.2",
     "@ethereumjs/util": "^8.0.5",
     "@metamask/eth-sig-util": "^5.0.2",
-    "@metamask/key-tree": "^6.0.0",
-    "@metamask/keyring-api": "^0.1.3",
-    "@metamask/rpc-methods": "^0.30.0",
-    "@metamask/snaps-types": "0.38.0-flask.1",
+    "@metamask/keyring-api": "^1.0.0",
+    "@metamask/snaps-types": "^3.0.0",
     "@metamask/snaps-ui": "^0.32.2",
     "@metamask/utils": "^3.3.0",
     "buffer": "^6.0.3",
-    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.0",
     "uuid": "^9.0.0"
   },
@@ -77,7 +84,7 @@
     "@metamask/eslint-config-jest": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
-    "@metamask/snaps-cli": "^0.32.2",
+    "@metamask/snaps-cli": "^3.0.0",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
@@ -100,7 +107,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "publishConfig": {
     "access": "public",
