--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -1,11 +1,7 @@
 name: Build, Lint, and Test
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches:
-      - '**'
+  workflow_call:
 
 jobs:
   build-lint-test:
@@ -46,16 +42,3 @@ jobs:
             echo "Working tree dirty after building"
             exit 1
           fi
-  #      - name: Validate RC changelog
-  #        if: ${{ startsWith(github.head_ref, 'release/') }}
-  #        run: yarn auto-changelog validate --rc
-  #      - name: Validate changelog
-  #        if: ${{ !startsWith(github.head_ref, 'release/') }}
-  #        run: yarn auto-changelog validate
-  all-jobs-pass:
-    name: All jobs pass
-    runs-on: ubuntu-20.04
-    needs:
-      - build-lint-test
-    steps:
-      - run: echo "Great success!"
