--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -8,13 +8,13 @@
     "url": "https://transeptorlabs.io"
   },
   "scripts": {
-    "build": "cross-env GATSBY_TELEMETRY_DISABLED=1 gatsby build",
+    "build": "rimraf .cache && cross-env GATSBY_TELEMETRY_DISABLED=1 gatsby build --prefix-paths",
     "clean": "rimraf public",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:eslint": "eslint . --cache --ext js,ts",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path .gitignore",
-    "start": "cross-env GATSBY_TELEMETRY_DISABLED=1 gatsby develop",
+    "start": "rimraf .cache && cross-env GATSBY_TELEMETRY_DISABLED=1 gatsby develop",
     "test": "echo \"TODO\""
   },
   "browserslist": {
@@ -69,6 +69,7 @@
     "null-loader": "^4.0.1",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.18",
+    "react-scripts": "^5.0.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   }
