--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react"
   },
   "include": ["src/", "gatsby-*.ts", "gatsby-*.tsx"]
