--- a/.github/workflows/site-deploy.yml
+++ b/.github/workflows/site-deploy.yml
@@ -24,9 +24,7 @@ jobs:
           yarn build
         env:
           GATSBY_PATH_PREFIX: ${{ github.event.repository.name }}
-      - name: Set snap origin
-        run: |
-          echo GATSBY_SNAP_ORIGIN=npm:@transeptor-labs/${{ github.event.repository.name }} >> .env.production
+          SNAP_ORIGIN: npm:@transeptor-labs/${{ github.event.repository.name }}
       - name: Cache build artifacts
         uses: actions/cache@v3
         id: cache-build
