--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "esnext",
     "resolveJsonModule": true,
-    "skipLibCheck": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve"
   },
-  "include": ["src/", "gatsby-*.ts", "gatsby-*.tsx"]
+  "include": ["src"]
 }
