--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -23,12 +23,16 @@ jobs:
         run: |
           yarn install
           yarn build
+        env:
+          GATSBY_PATH_PREFIX: ${{ github.event.repository.name }}
+          GATSBY_SNAP_ORIGIN: npm:@transeptor-labs/${{ github.event.repository.name }}
       - name: Cache build artifacts
         uses: actions/cache@v3
         id: cache-build
         with:
           path: |
             ./packages/snap/dist
+            ./packages/site/public
             ./node_modules/.yarn-state.yml
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - name: Dry Run Publish
@@ -45,3 +49,8 @@ jobs:
           npm publish ./packages/snap --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Deploy to `gh-pages` branch
+        uses: peaceiris/actions-gh-pages@de7ea6f8efb354206b205ef54722213d99067935
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./packages/site/public
