--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.6.0",
+    "@ethereumjs/tx": "^4.1.2",
     "@metamask/keyring-api": "^1.0.0",
     "@metamask/providers": "^13.0.0",
+    "@metamask/utils": "^3.3.0",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-blockies": "1.4.1",
